# winter

./: .clang-format  .gitignore  CMakeLists.txt
assets/materials/: test.mat
assets/scripts/: hello_world.wren
assets/shaders/: deferred_lighting_shader.frag  deferred_lighting_shader.vert  deferred_rendering_shader.frag  deferred_rendering_shader.vert  lamp_shader.frag  lamp_shader.vert  lighting_shader.frag  lighting_shader.vert  lighting_shader_no_textures.frag  pixel_shader.frag  pixel_shader.vert  simple_shader.frag  simple_shader.vert  uv_test_shader.frag  uv_test_shader.vert
assets/tilemaps/: forest.tmx
assets/tilesets/: forest.tsx
cmake/modules/: FindASSIMP.cmake
include/: stb_image.h  stb_image_aug.c  stb_image_aug.h
include/GLFW/: glfw3.h
include/imgui/: imgui.h  imgui_internal.h  imstb_textedit.h  imstb_truetype.h
lib/imgui/: imgui.cpp  imgui_draw.cpp  imgui_widgets.cpp
scenes/: first_scene.scene
src/: engine.cpp  engine.h  main.cpp  timer.h  window.cpp  window.h
src/constants/: folder_constants.h  shader_constants.h
src/context/: demo_context.cpp  demo_context.h  winter_context.cpp  winter_context.h
src/entity/: camera.cpp  camera.h  component.cpp  component.h  entity.cpp  entity.h  entity_manager.cpp  entity_manager.h  tilemap_renderer.h  transform.cpp  transform.h
src/input/: input.cpp  input.h  input_processor.cpp  input_processor.h  keys.h
src/maths/: colour.h  float2.h  float3.h  float4.h  grid.h  int2.h  maths.h  matrix.h  matrix4x4.h  matrix_operations.h  quaternion.h  transform.h  vec.h  vec_operations.h
src/rendering/: cube_map.cpp  cube_map.h  directional_light.cpp  directional_light.h  framebuffer.cpp  framebuffer.h  material.cpp  material.h  mesh.cpp  mesh.h  opengl_renderer.cpp  opengl_renderer.h  point_light.h  render_queue.cpp  render_queue.h  renderbuffer.cpp  renderbuffer.h  shader.cpp  shader.h  spot_light.cpp  spot_light.h  texture.cpp  texture.h  vertex.h
src/resources/: cube_map_repository.cpp  cube_map_repository.h  material_factory.h  material_repository.cpp  material_repository.h  mesh_factory.h  mesh_repository.cpp  mesh_repository.h  resource_factory.h  resource_handle.h  resource_loader.cpp  resource_loader.h  resource_manager.h  resources.h  (+9 more)
(+75 files in other folders)
